# zzdPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/zhangzd/cusplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CusPlayerFFmpeg.cpp  CusPlayerFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/java/com/example/zhangzd/cusplayer/: LivePlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/zhangzd/cusplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
